<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/activity_customers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.quandoo.sodaoud.app.view.CustomersActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/customer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
</layout>
