<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tables"
            type="com.quandoo.sodaoud.app.viewmodel.TablesViewModel"/>
    </data>

    <RelativeLayout
        android:id="@+id/activity_table_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.quandoo.sodaoud.app.view.TableSelectionActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
</layout>
